# DLR-SkyScapes

./: .gitignore  README.md  evaluate.py  pyproject.toml  test_models.py  train.py
data/: skyscapes_dataset.py  transforms.py
losses/: __init__.py  loss.py
models/: __init__.py  craspp.py  fc_densenet.py  frsr.py  hub.py  layers.py  lkbr.py  skyscapesnet.py
utils/: __init__.py  augment.py  metrics.py
